# cruiseControl

./: CC_design_principles_clean.txt  CC_pdf_extracted.txt  CC算法设计原理_v0.2.md  CMakeLists.txt  Readme.md  cpp_coding_prompt_template.md  plot_simulation.py
include/control/: cc_calc_control_torque.h  cc_calc_new_virtual_target.h  cc_calc_speed_error.h  cc_calc_target_deviation.h  cc_check_target_change.h  cc_control_def.h  cc_determine_next_cooldown_timer.h  cc_determine_next_step_index.h  cc_determine_next_virtual_target.h  cc_determine_torque_command.h  cc_determine_triggered.h  cc_limit_virtual_target.h  cc_sppvt_step.h  cc_update_cooldown_timer.h  cc_update_virtual_target.h
include/decision/: cc_check_speed_substate.h  cc_check_system_substate.h  cc_decision_def.h  cc_determine_next_active.h  cc_determine_next_last_target.h  cc_determine_next_target.h  cc_determine_state.h  cc_evaluate_decision.h  cc_process_command.h
include/math/: math_utils.h
output/: simulation_results.csv
src/control/: cc_calc_control_torque.cpp  cc_calc_new_virtual_target.cpp  cc_calc_speed_error.cpp  cc_calc_target_deviation.cpp  cc_check_target_change.cpp  cc_determine_next_cooldown_timer.cpp  cc_determine_next_step_index.cpp  cc_determine_next_virtual_target.cpp  cc_determine_torque_command.cpp  cc_determine_triggered.cpp  cc_limit_virtual_target.cpp  cc_sppvt_step.cpp  cc_update_cooldown_timer.cpp  cc_update_virtual_target.cpp
src/decision/: cc_check_speed_substate.cpp  cc_check_system_substate.cpp  cc_determine_next_active.cpp  cc_determine_next_last_target.cpp  cc_determine_next_target.cpp  cc_determine_state.cpp  cc_evaluate_decision.cpp  cc_process_command.cpp
src/math/: abs_val.cpp  calc_acceleration.cpp  clamp_val.cpp
test/: test_control.cpp  test_decision.cpp  test_integration.cpp
